--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,6 +12,6 @@
         android:src="@drawable/github"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        />
+        android:contentDescription="@string/github_icon" />
 
 </RelativeLayout>
