--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -16,7 +16,7 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_avatar"
             android:layout_width="150dp"
             android:layout_height="150dp"
@@ -31,20 +31,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:gravity="center_horizontal"
             android:text="@string/dummy"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:text="@string/dummy"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="12dp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
 
@@ -53,7 +55,9 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
+            android:paddingStart="10dp"
             android:paddingLeft="10dp"
+            android:paddingEnd="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="20dp">
 
@@ -68,7 +72,10 @@
                     android:id="@+id/tv_repository"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:paddingStart="16dp"
                     android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     android:text="@string/dummy"
                     android:textAlignment="center"
                     android:textColor="@color/white" />
@@ -76,8 +83,11 @@
                 <TextView
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="16dp"
-                    android:text="Repository"
+                    android:gravity="center_horizontal"
+                    android:paddingStart="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/repository"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
@@ -96,7 +106,10 @@
                     android:id="@+id/tv_following"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:paddingStart="16dp"
                     android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     android:text="@string/dummy"
                     android:textAlignment="center"
                     android:textColor="@color/white" />
@@ -104,8 +117,11 @@
                 <TextView
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="16dp"
-                    android:text="Following"
+                    android:gravity="center_horizontal"
+                    android:paddingStart="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/following"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
@@ -123,7 +139,10 @@
                     android:id="@+id/tv_followers"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:paddingStart="16dp"
                     android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     android:text="@string/dummy"
                     android:textAlignment="center"
                     android:textColor="@color/white" />
@@ -131,11 +150,14 @@
                 <TextView
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="16dp"
-                    android:text="Followers"
+                    android:paddingStart="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/followers"
                     android:textAlignment="center"
                     android:textColor="@color/white"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:gravity="center_horizontal" />
 
             </LinearLayout>
         </LinearLayout>
@@ -151,8 +173,10 @@
         <TextView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:paddingStart="16dp"
             android:paddingLeft="16dp"
-            android:text="Company"
+            android:paddingRight="16dp"
+            android:text="@string/company"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
@@ -160,7 +184,9 @@
             android:id="@+id/tv_company"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="16dp"
             android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:text="@string/dummy"
             android:textColor="@color/white"
             android:textStyle="bold" />
@@ -176,8 +202,10 @@
         <TextView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:paddingStart="16dp"
             android:paddingLeft="16dp"
-            android:text="Location"
+            android:paddingRight="16dp"
+            android:text="@string/location"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
@@ -185,7 +213,9 @@
             android:id="@+id/tv_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="16dp"
             android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:text="@string/dummy"
             android:textColor="@color/white"
             android:textStyle="bold" />
