--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -41,7 +41,8 @@
         android:ellipsize="end"
         android:maxLines="3"
         android:text="@string/dummy"
-        android:layout_marginLeft="26dp" />
+        android:layout_marginLeft="26dp"
+        android:layout_toEndOf="@id/img_avatar" />
 
     <TextView
         android:id="@+id/txt_location"
@@ -55,7 +56,8 @@
         android:maxLines="3"
         android:text="@string/dummy"
         android:textColor="@color/white"
-        android:layout_marginLeft="26dp" />
+        android:layout_marginLeft="26dp"
+        android:layout_toEndOf="@id/img_avatar" />
 
 
 </RelativeLayout>
