--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -11,53 +12,61 @@
         android:id="@+id/img_avatar"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:civ_border_width="2dp"
         app:civ_border_color="@color/white"
-        />
+        app:civ_border_width="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_username"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/img_avatar"
+        android:layout_toRightOf="@+id/img_avatar"
         android:text="@string/dummy"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_marginLeft="26dp"
-        android:layout_toRightOf="@+id/img_avatar" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_avatar"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_company"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_username"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/white"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_toEndOf="@id/img_avatar"
         android:layout_toRightOf="@id/img_avatar"
         android:ellipsize="end"
         android:maxLines="3"
         android:text="@string/dummy"
-        android:layout_marginLeft="26dp"
-        android:layout_toEndOf="@id/img_avatar" />
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_avatar"
+        app:layout_constraintTop_toBottomOf="@+id/txt_username" />
 
     <TextView
         android:id="@+id/txt_location"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_company"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_toEndOf="@id/img_avatar"
         android:layout_toRightOf="@id/img_avatar"
         android:ellipsize="end"
         android:maxLines="3"
         android:text="@string/dummy"
         android:textColor="@color/white"
-        android:layout_marginLeft="26dp"
-        android:layout_toEndOf="@id/img_avatar" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_avatar"
+        app:layout_constraintTop_toBottomOf="@+id/txt_company" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
